set04/problem01_compile_errors.txt
Compilation started at 2/26/2024, 10:25:32 PM
c:\Users\Sumithra Walke\OneDrive\Documents\GitHub\C_activity_sets\set04\problem01.c: In function 'gcd':
c:\Users\Sumithra Walke\OneDrive\Documents\GitHub\C_activity_sets\set04\problem01.c:10:24: warning: 'return' with a value, in function returning void
     if (b == 0) return a;
                        ^
c:\Users\Sumithra Walke\OneDrive\Documents\GitHub\C_activity_sets\set04\problem01.c:9:6: note: declared here
 void gcd(int a, int b) {
      ^~~
c:\Users\Sumithra Walke\OneDrive\Documents\GitHub\C_activity_sets\set04\problem01.c: In function 'add':
c:\Users\Sumithra Walke\OneDrive\Documents\GitHub\C_activity_sets\set04\problem01.c:16:13: error: void value not ignored as it ought to be
     int g = gcd(den1, den2);
             ^~~
c:\Users\Sumithra Walke\OneDrive\Documents\GitHub\C_activity_sets\set04\problem01.c: In function 'main':
c:\Users\Sumithra Walke\OneDrive\Documents\GitHub\C_activity_sets\set04\problem01.c:29:5: warning: parameter names (without types) in function declaration
     void gcd(a,b);
     ^~~~
Compilation finished at 2/26/2024, 10:25:32 PM
